# biorobots_1.6.1_reproducible

./: .travis.yml  CMakeLists.txt  README.md  dist_histo.py  main.cpp
cmake_build/: README.md
config/: PhysiCell_settings.xml
core/: CMakeLists.txt
custom_modules/: CMakeLists.txt  biorobots.cpp
modules/: CMakeLists.txt
out_biorobots1/: anim_svg_sub.py  anim_svg_sub_grid.py  final.xml  final_cells.mat  initial.xml  output00000000.xml  output00000001.xml  output00000001_cells.mat  output00000001_cells_physicell.mat  output00000001_microenvironment0.mat  output00000002.xml  output00000002_cells.mat  output00000003.xml  output00000003_cells.mat  output00000003_cells_physicell.mat  output00000004.xml  output00000004_cells.mat  output00000005.xml  output00000005_microenvironment0.mat  output00000006.xml  output00000006_cells.mat  output00000006_cells_physicell.mat  output00000007.xml  output00000007_cells.mat  output00000008.xml  output00000008_cells_physicell.mat  output00000009.xml  output00000009_cells_physicell.mat  output00000010.xml  output00000010_cells.mat  output00000010_microenvironment0.mat  output00000011.xml  output00000011_cells_physicell.mat  output00000012.xml  output00000012_cells_physicell.mat  output00000012_microenvironment0.mat  output00000013.xml  output00000013_microenvironment0.mat  output00000014.xml  output00000015.xml  (+3555 more)
out_biorobots2/: final.xml  final_cells_physicell.mat  final_microenvironment0.mat  initial.xml  initial_cells.mat  output00000000.xml  output00000000_cells_physicell.mat  output00000001.xml  output00000002.xml  output00000002_cells_physicell.mat  output00000003.xml  (+3607 more)
